WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44892
Fix namespace for wtf/Complex.h and wtf/Vector3.h
https://bugs.webkit.org/show_bug.cgi?id=44892
Summary
Fix namespace for wtf/Complex.h and wtf/Vector3.h
Chris Rogers
Reported
2010-08-30 14:21:12 PDT
Fix namespace for wtf/Complex.h and wtf/Vector3.h
Attachments
Patch
(1.51 KB, patch)
2010-08-30 14:23 PDT
,
Chris Rogers
no flags
Details
Formatted Diff
Diff
Patch
(1.88 KB, patch)
2010-08-30 16:48 PDT
,
Chris Rogers
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2010-08-30 14:23:20 PDT
Created
attachment 65954
[details]
Patch
Kenneth Russell
Comment 2
2010-08-30 16:20:19 PDT
Comment on
attachment 65954
[details]
Patch The #if guards are incorrect for these files as well.
Chris Rogers
Comment 3
2010-08-30 16:48:58 PDT
Created
attachment 65978
[details]
Patch
WebKit Review Bot
Comment 4
2010-08-30 16:52:25 PDT
Attachment 65978
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 JavaScriptCore/wtf/Vector3.h:29: #ifndef header guard has wrong style, please use: Vector3_h [build/header_guard] [5] JavaScriptCore/wtf/Complex.h:29: #ifndef header guard has wrong style, please use: Complex_h [build/header_guard] [5] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kenneth Russell
Comment 5
2010-08-30 17:15:45 PDT
Comment on
attachment 65978
[details]
Patch I think the updates to the #include guards are the right thing to do regardless of what check-webkit-style says. r=me. Will file a bug against check-webkit-style.
Chris Rogers
Comment 6
2010-08-30 19:05:02 PDT
Comment on
attachment 65978
[details]
Patch Clearing flags on attachment: 65978 Committed
r66446
: <
http://trac.webkit.org/changeset/66446
>
Chris Rogers
Comment 7
2010-08-30 19:05:06 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 8
2010-08-31 10:15:40 PDT
Please note that WTF symbols expected to be used in other projects need to have using declarations. We don't want to pollute WebCore with those (or with WTF:: prefixes), so we put them right into WTF headers. See e.g. Vector.h: } // namespace WTF using WTF::Vector; #endif // WTF_Vector_h
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug