2010-08-30  Chris Rogers  <crogers@google.com>

Reviewed by Kenneth Russell.

        Fix namespace for wtf/Complex.h and wtf/Vector3.h
        https://bugs.webkit.org/show_bug.cgi?id=44892

        * wtf/Complex.h:
        * wtf/Vector3.h:


Canonical link: https://commits.webkit.org/57206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66446 268f45cc-cd09-0410-ab3c-d52691b4dbfc